Creado mediante Colaboratory

--- a/3erSemanaProg.ipynb
+++ b/3erSemanaProg.ipynb
@@ -6,7 +6,7 @@
       "name": "3erSemanaProg.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPx7eLdpwGZxqhYfyBJKeba",
+      "authorship_tag": "ABX9TyPUqgkKNZ1omvCdHAlIOF00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,38 +43,31 @@
     {
       "cell_type": "code",
       "source": [
-        "def Cn (c,x,n):\n",
-        "    return c * (1 + x / 100) ** n\n",
+        "cantidad= float(input(\"Ingrese la cantidad de Pesos: \"))\n",
+        "tasa= float(input(\"Ingrese la Tasa de Interes: \"))\n",
+        "años= float(input(\"Ingrese la cantidad de años: \"))\n",
         "\n",
-        "leyendo = True\n",
-        "while leyendo:\n",
-        "    try:\n",
-        "        c = float(input (\"Introduce el capital: \"))\n",
-        "        n = float(input (\"Introduce los años  : \"))\n",
-        "        x = float(input (\"Introduce el interés: \"))\n",
-        "        leyendo = False\n",
-        "    except:\n",
-        "        print(\"Error en la introducción de datos\\n\")\n",
-        "   \n",
-        "print(\"Total a pagar: \", Cn(c,x,n), \"Pesos\")"
+        "Cn = cantidad * (1 + tasa/100) * años\n",
+        "\n",
+        "print('El monto final a obtener es ' + str(Cn))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-yWqioiQotxX",
-        "outputId": "70dff67b-5d02-400f-af5e-423498f56a46"
+        "outputId": "003e0433-cc41-488f-ea5d-f64da270fad0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Introduce el capital: 20000\n",
-            "Introduce los años  : 36\n",
-            "Introduce el interés: 40\n",
-            "Total a pagar:  3644511123.4437127 Pesos\n"
+            "Ingrese la cantidad de Pesos: 2000\n",
+            "Ingrese la Tasa de Interes: 52\n",
+            "Ingrese la cantidad de años: 12\n",
+            "El monto final a obtener es 36480.0\n"
           ]
         }
       ]
@@ -82,34 +75,25 @@
     {
       "cell_type": "code",
       "source": [
-        "def fahrenheitToCelsius(c):\n",
-        "    return 9/5 * c + 32\n",
-        "\n",
-        "leyendo = True\n",
-        "while leyendo:\n",
-        "    try:\n",
-        "        c = float(input(\"Introduzca temperatura en grados Celsius: \"))\n",
-        "        leyendo = False\n",
-        "    except:\n",
-        "        print(\"Introduzca un valor numérico\\n\")\n",
-        "\n",
-        "print (\"La temperatura equivalente en grados Fahrenheit es :\", fahrenheitToCelsius(c))"
+        "grados = float(input(\"Introduzca temperatura en grados Fahrenheit: \"))\n",
+        "grados_celsius = (grados - 32) * 5/9\n",
+        "print('Los grados Celcius son ' + str(grados_celsius))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0CLCjHOks1M4",
-        "outputId": "5b34ad01-2918-4ecd-fb96-4d29afd9c84f"
+        "outputId": "0286dea4-7c8f-4399-a925-a8e784982c91"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Introduzca temperatura en grados Celsius: 100\n",
-            "La temperatura equivalente en grados Fahrenheit es : 212.0\n"
+            "Introduzca temperatura en grados Fahrenheit: 25\n",
+            "Los grados Celcius son -3.888888888888889\n"
           ]
         }
       ]
@@ -339,40 +323,29 @@
     {
       "cell_type": "code",
       "source": [
-        "Amig1= input(\"Nombre mejor amigo: \")\n",
-        "Amig2= input(\"Nombre mejor amigo: \")\n",
-        "Amig3= input(\"Nombre mejor amigo: \")\n",
-        "Amig4= input(\"Nombre mejor amigo: \")\n",
-        "Amig5= input(\"Nombre mejor amigo: \")\n",
-        "print(\"Hola \" + Amig1)\n",
-        "print(\"Hola \" + Amig2)\n",
-        "print(\"Hola \" + Amig3)\n",
-        "print(\"Hola \" + Amig4)\n",
-        "print(\"Hola \" + Amig5)\n"
+        "amigos= ['Tuki','Flor','Mara','Vero','Dani']\n",
+        "\n",
+        "for i in range(0,5):\n",
+        "    print('Hola ' + amigos[i] + ' como estas?')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZxNXXRQDafZN",
-        "outputId": "1f1cc674-9148-49fc-8871-05d3f018daa6"
+        "outputId": "64413e99-cc3d-4a60-aab7-17ec5c96da18"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nombre mejor amigo: juan\n",
-            "Nombre mejor amigo: lolo\n",
-            "Nombre mejor amigo: pepe\n",
-            "Nombre mejor amigo: tutu\n",
-            "Nombre mejor amigo: riro\n",
-            "Hola juan\n",
-            "Hola lolo\n",
-            "Hola pepe\n",
-            "Hola tutu\n",
-            "Hola riro\n"
+            "Hola Tuki como estas?\n",
+            "Hola Flor como estas?\n",
+            "Hola Mara como estas?\n",
+            "Hola Vero como estas?\n",
+            "Hola Dani como estas?\n"
           ]
         }
       ]
@@ -389,13 +362,128 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for i in range(0,5):\n",
+        "  amigos=input(\"Nombre de tu amigo: \")\n",
+        "  print(\"Hola \" + amigos)"
       ],
       "metadata": {
-        "id": "qWcgDRlujJzX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ed2dMoA8wkWR",
+        "outputId": "2e033758-7424-42e3-e200-7457d3ff9553"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre de tu amigo: Juan\n",
+            "Hola Juan\n",
+            "Nombre de tu amigo: Andres\n",
+            "Hola Andres\n",
+            "Nombre de tu amigo: Lila\n",
+            "Hola Lila\n",
+            "Nombre de tu amigo: Flor\n",
+            "Hola Flor\n",
+            "Nombre de tu amigo: Matias\n",
+            "Hola Matias\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Escribir un programa que use un ciclo definido con rango numérico, que pregunte los nombres de sus seis mejores amigos/as, y los salude."
+      ],
+      "metadata": {
+        "id": "e2HBqUb6Ei5F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(0,6):\n",
+        "  amigos=input(\"Nombre de tu amigo: \")\n",
+        "  print(\"Hola \" + amigos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YBrVvyUCFQNd",
+        "outputId": "1e324075-ca00-4189-85fd-ad286211726b"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre de tu amigo: Juan\n",
+            "Hola Juan\n",
+            "Nombre de tu amigo: P\n",
+            "Hola P\n",
+            "Nombre de tu amigo: W\n",
+            "Hola W\n",
+            "Nombre de tu amigo: Q\n",
+            "Hola Q\n",
+            "Nombre de tu amigo: E\n",
+            "Hola E\n",
+            "Nombre de tu amigo: F\n",
+            "Hola F\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Escribir un programa que use un ciclo definido con rango numérico, que averigue a cuántos amigos quieren saludar, les pregunte los nombres de esos amigos/as, y los salude.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uw1nZ7V9FeNF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "amigos= int(input(\"Cuantos amigos quieres saludar? \"))\n",
+        "\n",
+        "for i in range(0, amigos):\n",
+        "  amigo= input(\"Ingresa nombre de tu amigo: \")\n",
+        "  print(\"Hola \" + amigo)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nUBw1wYsFhk9",
+        "outputId": "47bc6e64-c83c-4782-bf76-4af6ed86c95f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cuantos amigos quieres saludar? 5\n",
+            "Ingresa nombre de tu amigo: Juan\n",
+            "Hola Juan\n",
+            "Ingresa nombre de tu amigo: Pepe\n",
+            "Hola Pepe\n",
+            "Ingresa nombre de tu amigo: Tincho\n",
+            "Hola Tincho\n",
+            "Ingresa nombre de tu amigo: Pablo\n",
+            "Hola Pablo\n",
+            "Ingresa nombre de tu amigo: Ale\n",
+            "Hola Ale\n"
+          ]
+        }
+      ]
     }
   ]
 }
